# AI_function_calling

./: README.md  main.py  pyproject.toml
