[project]
name = "ai-function-calling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "load-dotenv>=0.1.0",
    "openai>=1.68.2",
    "pylance>=0.24.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
]
